# farm-stack-to-do-app

./: .gitignore  Justfile  README.md  compose.yml  farm-stack.code-workspace
backend/: .dockerignore  Dockerfile  Dockerfile.production  README.md  dev-requirements.ini  dev-requirements.txt  pyproject.toml  requirements-dev.ini  requirements-dev.txt  requirements.ini  requirements.txt
backend/scripts/: odm_comparison.py  sample_data.py
backend/src/: server.py
backend/src/celebmatcher/: cli.py  server.py
backend/src/todo/: cli.py  dal.py  dal_beanie.py  dal_motor.py  server.py
backend/tests/: conftest.py  test_dal.py  test_dal_beanie.py  test_dal_motor.py
frontend/: package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  ListTodoLists.css  ListTodoLists.js  ToDoList.css  ToDoList.js
nginx/: nginx.conf
